2010-06-09 1.2 beta 2 Release

           o add new option, log4jdbc.auto.load.popular.drivers for 
             disabling auto-loading of drivers

           o look first for log4jdbc property settings in optional 
             log4jdbc.properties file in the classpath.
             
           o Fix non-threadsafe usage of SimpleDateFormat (Issue 18)

           o add new option, log4jdbc.trim.sql to trim the SQL before logging
             it.

           o add new option, log4jdbc.suppress.generated.keys.exception that
             will ignore any exception produced by the method, 
             Statement.getGeneratedKeys().  This flag is useful in Coldfusion
             environments which typically call this method after every update,
             even if unwarranted, and ignoring the exception, thus clogging up 
             the logs with these exception reports.

           o add support for the newer oracle.jdbc.OracleDriver driver (the
             older oracle.jdbc.driver.OracleDriver driver is still supported
             as well) and add corrected date formatting for Oracle.
             
           o fix possible null pointer issue with setBlob and setClob (Issue 21)

2010-03-20 1.2 beta 1 Release

           o Check for exception that should not, but in some cases could 
             occur when trying to format parameter arguments.

           o Use only one type of date format so that time portion of Date
             types is not dropped!

           o use to_date function for Oracle (Issue 14)
           
           o performance improvements
           
           o fix: respect DumpSqlMaxLineLength option. 
           
           o various other fixes (including Issues 8 and 9)

2009-02-26 1.2 alpha 2 Release

           o (Issue 1) fix bug where batch of logged SQL wasn't cleared
             properly when using batched SQL.

           o Added log4jdbc.statement.warn system property; defaults to false.
